--- a/公众号名片/activitylist.html
+++ b/公众号名片/activitylist.html
@@ -150,9 +150,7 @@
 
 
 	<!--删除列表弹窗确认-->
-
-	<div class="black"></div>   <!--微信阴影层-->
-	<div class="black2"></div>  <!--删除按钮背景隐藏-->
+	<div class="black"></div>   <!--阴影层-->
 	<div class="delete-box">
 		<div class="delete-top">提示</div>
 		<div class="delete-hint">
