--- a/公众号名片/allform.html
+++ b/公众号名片/allform.html
@@ -23,7 +23,7 @@
                         <ul>
                             <li class="retreat"><img src="images/1151515.png" alt=""></li>
                             <li><input type="text" placeholder="请输入关键字"></li>
-                            <li class="delete-list"><img src="images/1515154.png" alt=""></li>
+                            <li class="delete-list"><img src="images/15614515.png" alt=""></li>
                         </ul>
                     </div>
                     <div class="content-box">
@@ -75,15 +75,9 @@
     </div> 
     
     <script src="js/jquery.js"></script>
-    <sctipt src="js/allform.js"></sctipt>
-    <script src="js/swiper/swiper.jquery.min.js"></script>
+    <script src="js/swiper/swiper.jquery.min.js"></script> 
+    <script src="js/allform.js"></script>
     <script type="text/javascript">
-    $('.delete-list').click(function() {
-        $('.list-check input:checked').each(function() { // 遍历选中的checkbox
-            var index = $(this).parents('.list-content').index();  // 获取checkbox所在行的顺序
-            $('.list-content').eq(index).remove();
-        });
-    });
 
 		window.myScroll = null;
 
