--- a/公众号名片/form.html
+++ b/公众号名片/form.html
@@ -46,10 +46,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="content-middle1-input">
+                        <div class="content-middle1-input"> 
                                 <span>手机:</span><input class="phone" type="text" placeholder="请输入手机号码">
                                 <i class="btn-phone"></i>
-                                <span class="phone-none"><input class="phone2" type="text" placeholder="请输入手机号码"></span><br/>
+                                <div class="phone-box"></div><!--多栏手机插入盒-->
                                 <span>固话:</span><input class="ugender" type="text" placeholder="请输入固话"><br/>
                                 <span>邮箱:</span><input class="uemail" type="text" placeholder="请输入邮箱">
                         </div>
