--- a/公众号名片/activitylist.html
+++ b/公众号名片/activitylist.html
@@ -169,21 +169,7 @@
 	<script src="js/jquery.js"></script>
 	<script src="js/swiper/swiper.jquery.min.js"></script>
 	<script src="js/activity.js"></script>
-	
-	<script>
-		window.myScroll = null;
-
-		$(function () {
-			window.myScroll = new Swiper('#scroll', {
-				direction: 'vertical',
-				slidesPerView: 'auto',
-				autoHeight: true,
-				freeMode: true,
-				onSliderMove: function (swiper, event) {
-				}
-			})
-		})
-	</script>
+    <script src="js/communal.js"></script>
 </body>
 
 </html>
