--- a/公众号名片/allform.html
+++ b/公众号名片/allform.html
@@ -77,20 +77,6 @@
     <script src="js/jquery.js"></script>
     <script src="js/swiper/swiper.jquery.min.js"></script> 
     <script src="js/allform.js"></script>
-    <script type="text/javascript">
-
-		window.myScroll = null;
-
-		$(function () {
-			window.myScroll = new Swiper('#scroll', {
-				direction: 'vertical',
-				slidesPerView: 'auto',
-				autoHeight: true,
-				freeMode: true,
-				onSliderMove:function(swiper, event){
-				}
-			})
-		})
-    </script>
+    <script src="js/communal.js"></script>
 </body>
 </html>
