--- a/公众号名片/complete.html
+++ b/公众号名片/complete.html
@@ -74,19 +74,6 @@
     <script src="js/jquery.js"></script>
     <script src="js/form.js"></script>
     <script src="js/swiper/swiper.jquery.min.js"></script>
-    <script>
-		window.myScroll = null;
-
-		$(function () {
-			window.myScroll = new Swiper('#scroll', {
-				direction: 'vertical',
-				slidesPerView: 'auto',
-				autoHeight: true,
-				freeMode: true,
-				onSliderMove:function(swiper, event){
-				}
-			})
-		})
-	</script>
+    <script src="js/communal.js"></script>
 </body>
 </html>
