--- a/公众号名片/map.html
+++ b/公众号名片/map.html
@@ -234,34 +234,6 @@
 	<script src="js/swiper/swiper.jquery.min.js"></script>
 	<script src="js/activity.js"></script>
 	<script src="js/map.js"></script>
-
-	<script>
-		window.myScroll = null;
-/*
-		$(function () {
-			window.myScroll = new Swiper('#scroll', {
-				direction: 'vertical',
-				slidesPerView: 'auto',
-				autoHeight: true,
-				freeMode: true,
-				onSlideChangeEnd: function (swiper) {
-					swiper.update(); //swiper更新
-				}
-			})
-		})*/
-
-		var mySwiper = new Swiper('#scroll', {
-			direction: 'vertical',
-				slidesPerView: 'auto',
-				autoHeight: true,
-				freeMode: true,
-				observer:true,//修改swiper自己或子元素时，自动初始化swiper 
-				observeParents:true,//修改swiper的父元素时，自动初始化swiper 
-				onSlideChangeEnd: function(swiper){ 
-				swiper.update(); //swiper更新
-			} 
-      });
-	</script>
+    <script src="js/communal.js"></script>
 </body>
-
 </html>
