--- a/公众号名片/complete.html
+++ b/公众号名片/complete.html
@@ -22,14 +22,14 @@
                     <div class="content-box">
                         <div class="content-top">
                             <span class="corporation">
-                            <p class="ucorporation-p">有才华有限公司</p>
+                            <p class="ucorporation-p">才华有限公司</p>
                             <!--<input class="ucorporation" type="text" placeholder="请输入公司名称" readonlyunselectable="on">-->
                             </span>           
                             <div class="hr1"></div>
                             <div class="hr2"></div>
                             <div class="content-top-box">
                                 <div class="content-top-img">
-                                    <img src="" alt="">
+                                    <img src="images/1564156165.png" alt="">
                                 </div>
                                 <div class="content-top-input">
                                     <input class="corporation-name" type="text" placeholder="姓名"><br/>
@@ -37,15 +37,13 @@
                                     <input class="corporation-section" type="text" placeholder="职能部门">       
                                 </div>
                                 <div class="content-top-wx">     
-                                    <a href="javascript:;"><img src="images/156165165.png" alt=""></a>
+                                    <a href="javascript:;"><img src="images/156165165.png" alt=""></a><br/><br/>
                                     <a  href="javascript:;"><img class="wx-alert" src="images/15615616.png" alt=""></a>        
                                 </div>
                             </div>
                         </div>
                         <div class="content-middle1-input">
                                 <span>手机:</span><input class="uname" type="text" placeholder="请输入手机号码">
-                                <!--<i class="btn-uname"></i>-->
-                                <span class="uname-none"><input class="uname2" type="text" placeholder="请输入手机号码"></span><br/>
                                 <span>固话:</span><input class="ugender" type="text" placeholder="请输入固话"><br/>
                                 <span>邮箱:</span><input class="usection" type="text" placeholder="请输入邮箱">
                         </div>
