--- a/公众号名片/form.html
+++ b/公众号名片/form.html
@@ -36,8 +36,9 @@
                             <div class="hr1"></div>
                             <div class="hr2"></div>
                             <div class="content-top-box">
-                                <div class="content-top-img">
-                                    <img src="images/1564156165.png" alt="">
+                                <div class="content-top-img">                        
+                                    <img class="file-img" src="images/1564156165.png" alt="">
+                                    <input class="file" type="file">
                                 </div>
                                 <div class="content-top-input">
                                     <input class="uname" type="text" placeholder="姓名"><br/>
@@ -83,6 +84,7 @@
     <script src="js/swiper/swiper.jquery.min.js"></script>
     <script src="js/mobiscroll/mobiscroll.min.js"></script>
     <script src="js/communal.js"></script>
+    <script src="js/pic.js"></script>
     <script type="text/javascript">
     $('.run').mobiscroll().select({
         width: 750,
