--- a/公众号名片/1.html
+++ b/公众号名片/1.html
@@ -5,62 +5,48 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <style type="text/css">
+    .top {
+  position: relative;
+  height: 340px; }
+  .top .img {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    width: 160px;
+    height: 160px;
+    overflow: hidden;
+    border-radius: 50%; }
+    .top .img img {
+      width: 100%;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      -webkit-transform: translate(-50%, -50%);
+          -ms-transform: translate(-50%, -50%);
+              transform: translate(-50%, -50%); }
+
+.file {
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0;
+  width: 100%;
+  height: 100%; }
+  </style>
 </head>
 <body>
-  <div class="maple-tab clearFix">
-    <ul>
-        <li class="active"><p class="m-border-right">订单状态</p></li>
-        <li><p>订单详情</p></li>
-    </ul>
-</div>
-<!--列表内容-->
-<div class="swiper-container" style="">
-    <div class="swiper-wrapper" style="">
-        <div class="swiper-slide">
-            <div class="content_div">
-                <p>erwrew</p><p>erwrew</p><p>erwrew</p><p>erwrew</p><p>erwrew</p><p>erwrew</p><p>erwrew</p><p>erwrew</p><p>erwrew</p>
-                <p>erwrew</p><p>erwrew</p><p>erwrew</p><p>erwrew</p><p>erwrew</p><p>erwrew</p><p>erwrew</p><p>erwrew</p><p>erwrew</p>
-                <p>erwrew</p><p>erwrew</p><p>erwrew</p><p>erwrew</p><p>erwrew</p><p>erwrew</p><p>erwrew</p><p>erwrew</p><p>erwrew</p>
+           <div class="top">
+                <div class="img">
+                    <img src="img/upload.png" alt="">
+                    <input type="file" class="file">
+                </div>
             </div>
-        </div>
-        <div class="swiper-slide">
-            <div class="content_div">
-                <p>列表2内容</p>
-                 <p>列表2内容</p> 
-                 <p>列表2内容</p>
-            </div>
-        </div>
-    </div>
-</div>
 <script src="js/jquery.js"></script>
 <script src="js/swiper/swiper.jquery.min.js"></script>
-<script>
-      $(function () {
-        var mySwiper = new Swiper('.swiper-container', {
-            onSlideChangeEnd: function (swiper) {
-                var j = mySwiper.activeIndex;
-                $('.maple-tab li').removeClass('active').eq(j).addClass('active');
-                var content_height = $(".content_div").eq(j).height();
-                var slide_height = $(".swiper-slide").eq(j).height(content_height);
-                $(".swiper-wrapper").css("height", content_height);
-                $(".swiper-container").css("height", content_height);
-            }
-        })
-        /*列表切换*/
-        $('.maple-tab li').on('click', function (e) {
-            e.preventDefault();
-            //得到当前索引
-            var i = $(this).index();
-            $('.maple-tab li').removeClass('active').eq(i).addClass('active');
-
-            var content_height = $(".content_div").eq(i).height();
-            var slide_height = $(".swiper-slide").eq(i).height(content_height);
-            $(".swiper-wrapper").css("height", content_height);
-            $(".swiper-container").css("height", content_height);
-            mySwiper.slideTo(i, 1000, false);
-
-        });
-    });
-</script>
+<script src="js/pic.js"></script>
 </body>
 </html>
