--- a/wxcard/index.html
+++ b/wxcard/index.html
@@ -10,6 +10,7 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mossbile-web-app-status-bar-style" content="black">
 	<meta name="format-detection" content="telephone=no" />
+	<meta http-equiv="Access-Control-Allow-Origin" content="*" />	
   <title></title>
 </head>
 
